--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -18,7 +18,7 @@
             <Cursor fx:constant="DISAPPEAR" />
          </cursor>
          <image>
-            <Image url="@mappa.jpg" />
+            <Image url="@mappa3.jpg" />
          </image></ImageView>
       <Button fx:id="redWeapon1" layoutX="1.0" layoutY="218.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="110.0">
          <cursor>
@@ -347,10 +347,10 @@
             </Tab>
         </tabs>
       </TabPane>
-      <Button fx:id="cell02" layoutX="153.0" layoutY="141.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="106.0" />
-      <Button fx:id="cell01" layoutX="148.0" layoutY="271.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="106.0" />
+      <Button fx:id="cell02" layoutX="153.0" layoutY="141.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="86.0" />
+      <Button fx:id="cell01" layoutX="148.0" layoutY="271.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="99.0" />
       <Button fx:id="cell00" layoutX="139.0" layoutY="413.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="99.0" />
-      <Button fx:id="cell10" layoutX="262.0" layoutY="415.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="127.0" />
+      <Button fx:id="cell10" layoutX="269.0" layoutY="415.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="120.0" />
       <Button fx:id="cell11" layoutX="274.0" layoutY="276.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="112.0" />
       <Button fx:id="cell12" layoutX="270.0" layoutY="138.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="127.0" />
       <Button fx:id="cell22" layoutX="412.0" layoutY="142.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="112.0" />
@@ -455,7 +455,7 @@
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer2Cell02" fitHeight="22.0" fitWidth="22.0" layoutX="234.0" layoutY="145.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer2Cell02" fitHeight="22.0" fitWidth="22.0" layoutX="195.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
@@ -465,37 +465,37 @@
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer4Cell02" fitHeight="22.0" fitWidth="22.0" layoutX="234.0" layoutY="219.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer4Cell02" fitHeight="22.0" fitWidth="22.0" layoutX="195.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer5Cell02" fitHeight="22.0" fitWidth="22.0" layoutX="234.0" layoutY="184.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer5Cell02" fitHeight="22.0" fitWidth="22.0" layoutX="156.0" layoutY="185.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer1Cell01" fitHeight="22.0" fitWidth="22.0" layoutX="156.0" layoutY="275.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer1Cell01" fitHeight="22.0" fitWidth="22.0" layoutX="171.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer2Cell01" fitHeight="22.0" fitWidth="22.0" layoutX="230.0" layoutY="275.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer2Cell01" fitHeight="22.0" fitWidth="22.0" layoutX="204.0" layoutY="316.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer3Cell01" fitHeight="22.0" fitWidth="22.0" layoutX="156.0" layoutY="349.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer3Cell01" fitHeight="22.0" fitWidth="22.0" layoutX="169.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer4Cell01" fitHeight="22.0" fitWidth="22.0" layoutX="230.0" layoutY="349.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer4Cell01" fitHeight="22.0" fitWidth="22.0" layoutX="204.0" layoutY="349.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer5Cell01" fitHeight="22.0" fitWidth="22.0" layoutX="230.0" layoutY="314.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer5Cell01" fitHeight="22.0" fitWidth="22.0" layoutX="206.0" layoutY="282.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
@@ -600,12 +600,12 @@
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer1Cell22" fitHeight="22.0" fitWidth="22.0" layoutX="420.0" layoutY="145.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer1Cell22" fitHeight="22.0" fitWidth="22.0" layoutX="420.0" layoutY="181.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer2Cell22" fitHeight="22.0" fitWidth="22.0" layoutX="494.0" layoutY="145.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer2Cell22" fitHeight="22.0" fitWidth="22.0" layoutX="494.0" layoutY="181.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
@@ -620,7 +620,7 @@
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer5Cell22" fitHeight="22.0" fitWidth="22.0" layoutX="494.0" layoutY="184.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer5Cell22" fitHeight="22.0" fitWidth="22.0" layoutX="461.0" layoutY="185.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
@@ -675,7 +675,7 @@
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer1Cell31" fitHeight="22.0" fitWidth="22.0" layoutX="549.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer1Cell31" fitHeight="22.0" fitWidth="22.0" layoutX="562.0" layoutY="282.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
@@ -705,7 +705,7 @@
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer2Cell30" fitHeight="22.0" fitWidth="22.0" layoutX="625.0" layoutY="409.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer2Cell30" fitHeight="22.0" fitWidth="22.0" layoutX="597.0" layoutY="408.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
@@ -715,12 +715,37 @@
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer4Cell30" fitHeight="22.0" fitWidth="22.0" layoutX="625.0" layoutY="483.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer4Cell30" fitHeight="22.0" fitWidth="22.0" layoutX="598.0" layoutY="483.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imPlayer5Cell30" fitHeight="22.0" fitWidth="22.0" layoutX="625.0" layoutY="448.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imPlayer5Cell30" fitHeight="22.0" fitWidth="22.0" layoutX="586.0" layoutY="445.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/Blu.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imPlayer1Cell20" fitHeight="22.0" fitWidth="22.0" layoutX="421.0" layoutY="419.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/Blu.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imPlayer2Cell20" fitHeight="22.0" fitWidth="22.0" layoutX="495.0" layoutY="419.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/Blu.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imPlayer3Cell20" fitHeight="22.0" fitWidth="22.0" layoutX="421.0" layoutY="493.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/Blu.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imPlayer4Cell20" fitHeight="22.0" fitWidth="22.0" layoutX="495.0" layoutY="493.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/Blu.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imPlayer5Cell20" fitHeight="22.0" fitWidth="22.0" layoutX="495.0" layoutY="458.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Icon/Blu.png" />
          </image>
