--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -41,7 +41,7 @@
          </Button>
       <Button fx:id="powerupDeck" disable="true" layoutX="709.0" layoutY="21.0" mnemonicParsing="false" prefHeight="72.0" prefWidth="51.0" />
       <Label fx:id="mylabel" layoutX="120.0" layoutY="156.0" prefHeight="29.0" prefWidth="51.0" />
-      <Button fx:id="showMap" layoutX="330.0" layoutY="543.0" mnemonicParsing="false" onAction="#showMap" prefHeight="57.0" prefWidth="142.0" text="READY??" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Button fx:id="showMap" layoutX="677.0" layoutY="278.0" mnemonicParsing="false" onAction="#showMap" prefHeight="57.0" prefWidth="142.0" text="READY??" AnchorPane.leftAnchor="677.0" AnchorPane.topAnchor="278.0">
          <font>
             <Font size="24.0" />
          </font></Button>
@@ -622,5 +622,36 @@
       </ImageView>
       <Label layoutX="1166.0" layoutY="383.0" prefHeight="38.0" prefWidth="78.0" text="Your Points : " />
       <Label fx:id="yourPointsLabel" layoutX="1239.0" layoutY="395.0" prefHeight="17.0" prefWidth="10.0" text="0" />
+      <ImageView fx:id="imSkull1" fitHeight="38.0" fitWidth="31.0" layoutX="56.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/skull.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imSkull2" fitHeight="38.0" fitWidth="31.0" layoutX="90.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/skull.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imSkull21" fitHeight="38.0" fitWidth="31.0" layoutX="124.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imSkull11" fitHeight="38.0" fitWidth="31.0" layoutX="157.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/skull.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imSkull22" fitHeight="38.0" fitWidth="31.0" layoutX="191.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/skull.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imSkull211" fitHeight="38.0" fitWidth="31.0" layoutX="225.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/skull.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imSkull2111" fitHeight="38.0" fitWidth="31.0" layoutX="235.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Icon/skull.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
