--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -65,12 +65,12 @@
                         <ImageView fx:id="imPowerupCard1" disable="true" fitHeight="192.0" fitWidth="120.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="imPowerupCard2" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="140.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="imPowerupCard3" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="279.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="bDiscardPowerup1" onAction="#discardPowerup" layoutX="89.0" layoutY="2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="31.0" />
-                        <Button fx:id="bDiscardPowerup2" onAction="#discardPowerup" layoutX="229.0" layoutY="4.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="31.0" />
-                        <Button fx:id="bDiscardPowerup3" onAction="#discardPowerup" layoutX="368.0" layoutY="2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bDiscardPowerup1" layoutX="89.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardPowerup" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bDiscardPowerup2" layoutX="229.0" layoutY="4.0" mnemonicParsing="false" onAction="#discardPowerup" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bDiscardPowerup3" layoutX="368.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardPowerup" prefHeight="25.0" prefWidth="31.0" />
                         <ImageView fx:id="imPowerupCard4" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="419.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
                         <Button fx:id="bPowerupCard4" disable="true" layoutX="419.0" layoutY="1.0" mnemonicParsing="false" prefHeight="195.0" prefWidth="120.0" />
-                        <Button fx:id="bDiscardPowerup4" onAction="#discardPowerup" layoutX="512.0" layoutY="2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bDiscardPowerup4" layoutX="512.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardPowerup" prefHeight="25.0" prefWidth="31.0" />
                         <ImageView fx:id="imTrashP1" fitHeight="25.0" fitWidth="31.0" layoutX="92.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@trash.png" />
@@ -99,18 +99,18 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="bWeaponCard1" disable="true" layoutY="5.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
-                        <Button fx:id="bWeaponCard2" disable="true" layoutX="140.0" layoutY="5.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
-                        <Button fx:id="bWeaponCard3" disable="true" layoutX="280.0" layoutY="5.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
-                        <ImageView fx:id="imWeaponCard1" disable="true" fitHeight="192.0" fitWidth="120.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="imWeaponCard2" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="140.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="imWeaponCard3" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="280.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="bReloadWeapon1" onAction="#reloadWeapon" layoutX="95.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
-                        <Button fx:id="bReloadWeapon2" onAction="#reloadWeapon" layoutX="232.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
-                        <Button fx:id="bReloadWeapon3" onAction="#reloadWeapon" layoutX="376.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
-                        <Button fx:id="bDiscardWeapon1" onAction="#discardWeapon" layoutX="96.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
-                        <Button fx:id="bDiscardWeapon2" onAction="#discardWeapon" layoutX="232.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
-                        <Button fx:id="bDiscardWeapon3" onAction="#discardWeapon" layoutX="374.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
+                        <Button fx:id="bWeaponCard1" disable="true" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
+                        <Button fx:id="bWeaponCard2" disable="true" layoutX="140.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
+                        <Button fx:id="bWeaponCard3" disable="true" layoutX="280.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
+                        <ImageView fx:id="imWeaponCard1" disable="true" fitHeight="192.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="imWeaponCard2" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="140.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="imWeaponCard3" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="280.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="bReloadWeapon1" layoutX="95.0" layoutY="98.0" mnemonicParsing="false" onAction="#reloadWeapon" text="reload" />
+                        <Button fx:id="bReloadWeapon2" layoutX="234.0" layoutY="98.0" mnemonicParsing="false" onAction="#reloadWeapon" text="reload" />
+                        <Button fx:id="bReloadWeapon3" layoutX="375.0" layoutY="98.0" mnemonicParsing="false" onAction="#reloadWeapon" text="reload" />
+                        <Button fx:id="bDiscardWeapon1" layoutX="91.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bDiscardWeapon2" layoutX="229.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bDiscardWeapon3" layoutX="370.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
                         <Button fx:id="addFire1" layoutX="63.0" layoutY="170.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
                            <font>
                               <Font size="10.0" />
@@ -130,15 +130,35 @@
                         <Button fx:id="selectWeaponButton2" layoutX="232.0" layoutY="63.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
                         <Button fx:id="selectWeaponButton3" layoutX="374.0" layoutY="63.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
                         <ImageView fx:id="imWeaponCard4" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="420.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="bWeaponCard4" disable="true" layoutX="420.0" layoutY="5.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
+                        <Button fx:id="bWeaponCard4" disable="true" layoutX="420.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
                         <Button fx:id="addFire4" layoutX="480.0" layoutY="170.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Button>
                         <Button fx:id="selectWeaponButton4" layoutX="513.0" layoutY="63.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
-                        <Button fx:id="bDiscardWeapon4" onAction="#discardWeapon" layoutX="513.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
-                        <Button fx:id="bReloadWeapon4" layoutX="515.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
+                        <Button fx:id="bDiscardWeapon4" layoutX="514.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bReloadWeapon4" layoutX="504.0" layoutY="98.0" mnemonicParsing="false" text="reload" />
+                        <ImageView fx:id="imTrashW1" fitHeight="25.0" fitWidth="31.0" layoutX="94.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@trash.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="imTrashW2" fitHeight="25.0" fitWidth="31.0" layoutX="232.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@trash.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="imTrashW3" fitHeight="25.0" fitWidth="31.0" layoutX="373.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@trash.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="imTrashW4" fitHeight="25.0" fitWidth="31.0" layoutX="517.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@trash.png" />
+                           </image>
+                        </ImageView>
                      </children>
                   </AnchorPane>
             </content>
@@ -160,7 +180,7 @@
             <content>
               <AnchorPane fx:id="enemy1back" minHeight="0.0" minWidth="0.0" prefHeight="384.0" prefWidth="527.0">
                      <children>
-                        <Button fx:id="enemyCharacter1" onAction="#selectEnemy" layoutX="84.0" layoutY="32.0" mnemonicParsing="false" prefHeight="131.0" prefWidth="439.0" />
+                        <Button fx:id="enemyCharacter1" layoutX="84.0" layoutY="32.0" mnemonicParsing="false" onAction="#selectEnemy" prefHeight="131.0" prefWidth="439.0" />
                         <ImageView fx:id="enemy1card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@emptyWeapon.jpg" />
@@ -209,7 +229,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="enemyCharacter2" onAction="#selectEnemy" layoutX="82.0" layoutY="30.0" mnemonicParsing="false" prefHeight="138.0" prefWidth="437.0" />
+                        <Button fx:id="enemyCharacter2" layoutX="82.0" layoutY="30.0" mnemonicParsing="false" onAction="#selectEnemy" prefHeight="138.0" prefWidth="437.0" />
                         <ImageView fx:id="enemy2card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@emptyWeapon.jpg" />
@@ -258,7 +278,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="enemyCharacter3" onAction="#selectEnemy" layoutX="82.0" layoutY="30.0" mnemonicParsing="false" prefHeight="138.0" prefWidth="437.0" />
+                        <Button fx:id="enemyCharacter3" layoutX="82.0" layoutY="30.0" mnemonicParsing="false" onAction="#selectEnemy" prefHeight="138.0" prefWidth="437.0" />
                         <ImageView fx:id="enemy3card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@emptyWeapon.jpg" />
@@ -339,7 +359,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="enemyCharacter4" onAction="#selectEnemy" layoutX="82.0" layoutY="30.0" mnemonicParsing="false" prefHeight="138.0" prefWidth="437.0" />
+                        <Button fx:id="enemyCharacter4" layoutX="82.0" layoutY="30.0" mnemonicParsing="false" onAction="#selectEnemy" prefHeight="138.0" prefWidth="437.0" />
                         <ImageView fx:id="enemy4card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@emptyWeapon.jpg" />
