--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -99,66 +99,63 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="bWeaponCard1" disable="true" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
-                        <Button fx:id="bWeaponCard2" disable="true" layoutX="140.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
-                        <Button fx:id="bWeaponCard3" disable="true" layoutX="280.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
-                        <ImageView fx:id="imWeaponCard1" disable="true" fitHeight="192.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="imWeaponCard2" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="140.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="imWeaponCard3" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="280.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="bReloadWeapon1" layoutX="95.0" layoutY="98.0" mnemonicParsing="false" onAction="#reloadWeapon" text="reload" />
-                        <Button fx:id="bReloadWeapon2" layoutX="234.0" layoutY="98.0" mnemonicParsing="false" onAction="#reloadWeapon" text="reload" />
-                        <Button fx:id="bReloadWeapon3" layoutX="375.0" layoutY="98.0" mnemonicParsing="false" onAction="#reloadWeapon" text="reload" />
-                        <Button fx:id="bDiscardWeapon1" layoutX="91.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
-                        <Button fx:id="bDiscardWeapon2" layoutX="229.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
-                        <Button fx:id="bDiscardWeapon3" layoutX="370.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
-                        <Button fx:id="addFire1" layoutX="63.0" layoutY="170.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
+                        <Button fx:id="bWeaponCard1" disable="true" mnemonicParsing="false" prefHeight="192.0" prefWidth="140.0" />
+                        <Button fx:id="bWeaponCard2" disable="true" layoutX="190.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="140.0" />
+                        <Button fx:id="bWeaponCard3" disable="true" layoutX="380.0" layoutY="2.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="140.0" />
+                        <ImageView fx:id="imWeaponCard1" disable="true" fitHeight="292.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="imWeaponCard2" disable="true" fitHeight="192.0" fitWidth="140.0" layoutX="190.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="imWeaponCard3" disable="true" fitHeight="192.0" fitWidth="140.0" layoutX="380.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="bReloadWeapon1" layoutX="125.0" layoutY="30.0" mnemonicParsing="false" onAction="#reloadWeapon" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bReloadWeapon2" layoutX="315.0" layoutY="30.0" mnemonicParsing="false" onAction="#reloadWeapon" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bReloadWeapon3" layoutX="505.0" layoutY="30.0" mnemonicParsing="false" onAction="#reloadWeapon" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bDiscardWeapon1" layoutX="125.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bDiscardWeapon2" layoutX="315.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="bDiscardWeapon3" layoutX="505.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
+                        <Button fx:id="addFire1" layoutX="98.0" layoutY="169.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Button>
-                        <Button fx:id="addFire2" layoutX="201.0" layoutY="170.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
+                        <Button fx:id="addFire2" layoutX="287.0" layoutY="169.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Button>
-                        <Button fx:id="addFire3" layoutX="342.0" layoutY="170.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
+                        <Button fx:id="addFire3" layoutX="478.0" layoutY="170.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Button>
-                        <Button fx:id="selectWeaponButton1" layoutX="96.0" layoutY="63.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
-                        <Button fx:id="selectWeaponButton2" layoutX="232.0" layoutY="63.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
-                        <Button fx:id="selectWeaponButton3" layoutX="374.0" layoutY="63.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
-                        <ImageView fx:id="imWeaponCard4" disable="true" fitHeight="192.0" fitWidth="120.0" layoutX="420.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="bWeaponCard4" disable="true" layoutX="420.0" mnemonicParsing="false" prefHeight="192.0" prefWidth="120.0" />
-                        <Button fx:id="addFire4" layoutX="480.0" layoutY="170.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
-                           <font>
-                              <Font size="10.0" />
-                           </font>
-                        </Button>
-                        <Button fx:id="selectWeaponButton4" layoutX="513.0" layoutY="63.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
-                        <Button fx:id="bDiscardWeapon4" layoutX="514.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
-                        <Button fx:id="bReloadWeapon4" layoutX="504.0" layoutY="98.0" mnemonicParsing="false" text="reload" />
-                        <ImageView fx:id="imTrashW1" fitHeight="25.0" fitWidth="31.0" layoutX="94.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                        <Button fx:id="selectWeaponButton1" layoutX="126.0" layoutY="63.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
+                        <Button fx:id="selectWeaponButton2" layoutX="316.0" layoutY="63.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
+                        <Button fx:id="selectWeaponButton3" layoutX="506.0" layoutY="63.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
+                        <ImageView fx:id="imTrashW1" fitHeight="25.0" fitWidth="31.0" layoutX="128.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@trash.png" />
                            </image>
                         </ImageView>
-                        <ImageView fx:id="imTrashW2" fitHeight="25.0" fitWidth="31.0" layoutX="232.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imTrashW2" fitHeight="25.0" fitWidth="31.0" layoutX="318.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@trash.png" />
                            </image>
                         </ImageView>
-                        <ImageView fx:id="imTrashW3" fitHeight="25.0" fitWidth="31.0" layoutX="373.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imTrashW3" fitHeight="25.0" fitWidth="31.0" layoutX="508.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@trash.png" />
                            </image>
                         </ImageView>
-                        <ImageView fx:id="imTrashW4" fitHeight="25.0" fitWidth="31.0" layoutX="517.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imReload1" fitHeight="25.0" fitWidth="31.0" layoutX="129.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@trash.png" />
-                           </image>
-                        </ImageView>
+                              <Image url="@reload.png" />
+                           </image></ImageView>
+                        <ImageView fx:id="imReload2" fitHeight="25.0" fitWidth="31.0" layoutX="318.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@reload.png" />
+                           </image></ImageView>
+                        <ImageView fx:id="imReload3" fitHeight="25.0" fitWidth="31.0" layoutX="506.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@reload.png" />
+                           </image></ImageView>
                      </children>
                   </AnchorPane>
             </content>
